--- a/styles.css
+++ b/styles.css
@@ -12,22 +12,20 @@ body {
 
 button {
     margin: 8px 0 8px 0;
-    /* 37px height */
 }
 .container {
     display: flex;
     flex-wrap: wrap;
     width: 880px;
-    height: 880px; /*928px height*/
+    height: 880px;
     border: 4px solid black;
 }
 
 #square {
-    /*border: 1px solid rgb(105, 105, 105);*/
     width: 55px;
     height: 55px;
 }
 
 .black {
-    background-color: rgb(82, 82, 82);
+    background-color: rgb(0, 0, 0);
 }
